Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64728

Android Service thread gets stuck

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.10.1
    • 5.10.0 Beta 4, 5.10.0
    • QPA
    • None
    • Qt 5.10, latest Android sdk/ndk
    • Android

      Seems that Qt based Android Service thread gets stuck in service startup. The exact location seems to be QtAndroidPrivate::waitForServiceSetup() called from startQtApplication() in androidjnimain.cpp.

      Qt thread continues to run ok - unless killed by the system because of the stuck main thread.

      Attached is a simple test application that is supposed to repeatedly output qDebug() from both threads.

        For Gerrit Dashboard: QTBUG-64728
        # Subject Branch Project Status CR V

            taipan BogDan Vatra
            heikki Heikki Haveri
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes